[package]
name = "osm_intersection_highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version="0.3.59", features=[ "console" ] }
seed = { version="0.9.2" }
leaflet = { version="0.2.1" }
quick-xml = { version="0.25.0", features=["serialize"]}
serde = { version="1.0"}
